# Rag-Reranking-Agent

./: README.md  pyproject.toml
data/: Dom_Casmurro_chunks_with_context_adj.json
data/Dom_Casmurro/: vector_db.pkl
src/: agent.py  configs.py  document_processor.py  simple_vectorDB.py
src/data/: Dom_Casmurro_chunks_with_context_adj.json
src/rag_agent_com_reranking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
